# flask-CRUD

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
HTML_Prototype/: Loan_issuance_list.html  add_loan_issuance.html  edit_loan_issuance.html  index.html  style.css  style_index.css
HTML_Prototype/styles/: style.css  style_index.css
ISSUANCE-OF-LOANS-APP/: .prettierrc.json  app.py  main.py  secrets.py
ISSUANCE-OF-LOANS-APP/static/css/: content.css
ISSUANCE-OF-LOANS-APP/templates/: Loan_issuance_list.html  add_loan_issuance.html  base_content.html  base_index.html  edit_loan_issuance.html  index.html  loan_issuance_list.html  register.html
documentation/SRS/: SRS.md
documentation/UML/: CLASS DIAGRAM FOR ISSUANCE OF LOANS  Issuance of loans
