[metadata]
name = IssuanceOfLoans
description = "Issuance of loans is web-application which allows users to record information about clients, credits and the loan applications."
long_description = file: README.md
author = Dorofeichik
version = attr: src.__VERSION__
license = MIT
classifiers =
    Programming Language :: Python :: 3.8

[options]
install_requires =
  requests
  importlib; python_version == "3.8"
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    venv

[tool.isort]
profile = "black"
multi_line_output = 3

[flake8]
ignore = D203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 10